--- a/files/en-us/web/accessibility/aria/roles/button_role/index.html
+++ b/files/en-us/web/accessibility/aria/roles/button_role/index.html
@@ -138,6 +138,11 @@ ul {
 <pre class="brush: js">function handleCommand(event) {
     // Handles both mouse clicks and keyboard
     // activate with Enter or Space
+    
+    // Keypresses other then Enter and Space should not trigger a command
+    if (event instanceof KeyboardEvent &amp;&amp; event.key !== 'Enter' &amp;&amp; event.key !== ' ') {
+        return;
+    }
 
     // Get the new name value from the input element
     let newNameInput = document.getElementById('newName');
